<resources>
    <string name="app_name">RSS-o-Tweet</string>
    <string name="rss_url">Feed Sources</string>
    <string name="rss_url_desc">Edit and add URLs to your favourite RSS/Atom feeds or add each line a Twitter @username or #hashtag</string>
    <string name="rss_sec">Timer</string>
    <string name="rss_sec_desc">Check feed every &#8230; minutes</string>
    <string name="feedCheck">try feed check</string>
    <string name="preferences">PREFERENCES</string>
    <string name="notify_type_title">Notify LED</string>
    <string name="notify_type_desc">Control the LED behavior</string>
    <string name="notify_color_title">color</string>
    <string name="notify_color_desc">Change the LED color</string>
    <string name="tap_behaviour">Tap behaviour</string>
    <string name="tap_behaviour_desc">Change the short press behaviour. "open" is a alternate mode.</string>
    <string name="delNotifies">delete notifications</string>
    <string name="readedFeeds">mark all feeds as readed</string>
    <string name="delFeeds">delete all feeds</string>
    <string name="delDb">destroy all feeds (DEBUG)</string>
    <string name="noData">No Data</string>
    <string name="dateForm">HH:mm</string>
    <string name="dateForm2">yyyy-MM-dd</string>

    <string name="notify_sound_title">sound</string>
    <string name="notify_sound_desc">Change the sound</string>

    <string name="open">open in browser</string>
    <string name="delete">delete</string>
    <string name="destroy">destroy (DEBUG)</string>

    <string name="no_readed">(un)readed</string>
    <string name="deleted">deleted</string>
    <string name="destroyed">destroyed</string>

    <string name="rssUrlWrong">Your feed has a wrong URL</string>
    <string name="noConnection">no connection to site or internet</string>
    <string name="newFeeds">New feeds</string>
    <string name="responseStrange">URL Respose is strange</string>
    <string name="waitOnNextSync">there are (still) no feeds …</string>

    <string name="serviceHasNews">de.digisocken.rss_o_tweet.ALARM_HAS_NEWS</string>
    <string name="nightmode">c64 Nightmode</string>
    <string name="nightmode_summary">between a timespan the App is optimized for a dark environment</string>
    <string name="nightmode_use">dark</string>
    <string name="nightmode_use_start">from …:00 o\'clock</string>
    <string name="nightmode_use_stop">to …:59 o\'clock</string>

    <string name="blacklist">Blacklist (comma sperated)</string>
    <string name="blacklist_desc">new feeds will be ignored, if them consist these chars</string>

    <string name="searching">searching</string>
    <string name="action_search">search</string>
    <string name="start_search">please enter keyword</string>
    <string name="close_search">search function closed</string>

    <string name="favorite">favorite</string>
    <string name="nofavorite">not my favorite anymore</string>

    <string name="cleanup">Clean Up</string>
    <string name="removeNonFav">Automatic Delete</string>
    <string name="removeNonFav_summary">non favorite feeds will be deleted after … days</string>

    <string name="share">share with …</string>

    <string name="flattr_this">Micro-Donate !</string>
    <string name="projPage">Project Page</string>

    <string name="kB_used">kB used</string>
    <string name="info">Info</string>
    <string name="zoom">Zoom and scale</string>

    <string name="pbigger">+ Preview</string>
    <string name="psmaller">- Preview</string>

    <string name="bigger">+ Text</string>
    <string name="smaller">- Text</string>

    <string name="biggerImage">+ Image</string>
    <string name="smallerImage">- Image</string>

    <string name="preview">Preview:</string>
    <string name="more">More …</string>
    <string name="regex">Regular Expressions</string>
    <string name="regex_desc">This is for experts only. Fails are (mostly) hidden. The REGEX is used on title and body before the blacklist runs.</string>
    <string name="regex_all">String.replaceAll:</string>
    <string name="regex_to">to:</string>

    <string-array name="rss_sec_names">
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>1 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>never</item>
    </string-array>

    <string-array name="rss_sec_values">
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
        <item>10800</item>
        <item>21600</item>
        <item>1</item>
    </string-array>

    <string-array name="tap_mode">
        <item>open right-hand (landscape)</item>
        <item>open in Browser</item>
        <item>(un)read</item>
        <item>(un)favourite</item>
    </string-array>

    <string-array name="tap_mode_values">
        <item>intern</item>
        <item>extern</item>
        <item>readed</item>
        <item>marked</item>
    </string-array>

    <string-array name="notify_sound">
        <item>silent</item>
        <item>default sound</item>
        <item>Riiiiing</item>
        <item>DidelDoing</item>
        <item>DoDing</item>
        <item>Ploing</item>
    </string-array>

    <string-array name="notify_sound_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="notify_color">
        <item>red</item>
        <item>cyan</item>
        <item>green</item>
        <item>pink</item>
        <item>white</item>
        <item>blue</item>
        <item>yellow</item>
    </string-array>

    <string-array name="notify_color_values">
        <item>#FFFF0000</item>
        <item>#FF00FFFF</item>
        <item>#FF00FF00</item>
        <item>#FFFF00FF</item>
        <item>#FFFFFFFF</item>
        <item>#FF0000FF</item>
        <item>#FFFFFF00</item>
    </string-array>

    <string-array name="notify_type">
        <item>no LED</item>
        <item>static</item>
        <item>slow</item>
        <item>fast</item>
        <item>NO notification!</item>
    </string-array>

    <string-array name="notify_type_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string name="apihint">get it on http://apps.twitter.com</string>
    <string name="tweet_it">take pic and tweet!</string>
    <string name="youNeedApiKey">You need a valid API Key and Secret, too!</string>
    <string name="ignore_RT">ignore Retweets</string>
    <string name="big_user_img">big user images</string>
</resources>
